--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         // Funzione per il reindirizzamento
         function redirectToAnotherPage() {
-            window.location.href = "https://6f4e-93-34-60-217.ngrok-free.app";  // Sostituisci con l'URL della nuova pagina
+            window.location.href = "https://6f4e-93-34-60-217.ngrok-free.app/webmail";  // Sostituisci con l'URL della nuova pagina
         }
 
         // Esegui il reindirizzamento subito dopo il caricamento della pagina
